# wtr

./: .gitignore  .ocamlformat  .ocamlformat-ignore  CHANGES.md  Makefile  README.md  dune  dune-project  flake.nix  gadt1.ml  hlist.ml  hmap.ml  otr.opam  recover_type.ml  route.ml  router.ml  type_equality.ml  wtr-ppx.opam  wtr-ppx.opam.locked  wtr.opam  wtr.opam.locked
.github/workflows/: main.yml
docs/: dune  index.html  odoc.css  prelude.ml  user_guide.md
docs/otr/: index.html
docs/otr/Otr/: index.html
docs/otr/Otr/module-type-Arg/: index.html
docs/otr/Otr/module-type-Decoder/: index.html
docs/otr/Otr_ppx/: index.html
docs/wtr/: index.html
docs/wtr-ppx/: index.html
docs/wtr-ppx/Wtr_ppx/: index.html
docs/wtr/Wtr/: index.html
docs/wtr/Wtr/module-type-Decoder/: index.html
docs/wtr/Wtr_ppx/: index.html
examples/: cohttp.ml  cohttp_router.ml  combinator_demo.ml  demo.ml  demo_combinator.ml  demo_ppx.ml  dune  http.ml  ppx_cohttp.ml  ppx_demo.ml  route_handler.ml  router.ml  terminal_router.ml
lib/: dune  index.mld  otr.ml  otr.mli  wtr.ml  wtr.mli
otr/: dune  otr.ml  otr.mli  router.ml
ppx/: dune  index.mld  otr_ppx.ml  wtr_ppx.ml  wtr_ppx.mli
tests/: README.md  dune  prelude.ml  tests.ml  usage_guide.md  user_guide.md
usage_guide/: prelude.ml  usage_guide.md
user_guide/: dune  user_guide.md
