(library
 (name hlist)
 (modules hlist))

(library
 (name router)
 (libraries core)
 (modules router))

(executable
 (name gadt1)
 (modules gadt1))

(executable
 (name type_equality)
 (modules type_equality))

(executable
 (name generic)
 (modules generic))

(executable
 (name recover_type)
 (modules recover_type))
