opam-version: "2.0"
version: "3.0.0"
synopsis: "Well Typed Router"
description: "Wtr - A typed router for OCaml web applications"
maintainer: ["Bikal Lem"]
authors: ["Bikal Lem, <gbikal@gmail.com>"]
license: "MPL-2.0"
homepage: "https://github.com/lemaetech/wtr"
bug-reports: "https://github.com/lemaetech/wtr/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.12.0"}
  "uri" {>= "4.2.0"}
  "ppx_expect" {with-test}
  "mdx" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
  ]
]
dev-repo: "git+https://github.com/lemaetech/wtr.git"
