;-----------------------------------------------
; 'route_handler' library is used by both sets 
; of examples. 
;-----------------------------------------------

(library
 (name route_handler)
 (modules route_handler)
 (libraries wtr))

;-----------------------------------------------
; Example executables using Request Target DSL 
; combinators. 
;
; Note: Dependent on 'wtr'.
;-----------------------------------------------

(executable
 (name cohttp_combinator)
 (modules cohttp_combinator)
 (libraries route_handler wtr cohttp cohttp-lwt cohttp-lwt-unix conduit-lwt))

(executable
 (name demo_combinator)
 (modules demo_combinator)
 (libraries wtr route_handler))

;---------------------------------------------
; Example executables using Request Target 
; DSL ppx.  
;
; Note: dependent on both 'wtr' and 'wtr-ppx'.
;---------------------------------------------

(executables
 (names demo_ppx)
 (modules demo_ppx)
 (libraries route_handler wtr)
 (preprocess
  (pps wtr_ppx)))

(executable
 (name cohttp_ppx)
 (modules cohttp_ppx)
 (libraries route_handler wtr cohttp cohttp-lwt cohttp-lwt-unix conduit-lwt)
 (preprocess
  (pps wtr_ppx)))
