;-----------------------------------------------
; 'route_handler' library is used by both sets 
; of examples. 
;-----------------------------------------------

(library
 (name router)
 (modules router)
 (libraries wtr)
 (preprocess
  (pps wtr-ppx)))

(executable
 (name terminal_router)
 (modules terminal_router)
 (libraries router wtr))
